--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
+deploy:
+  provider: heroku
+  api-key:
+    secure: $HEROKU_API_KEY
+  app: addressbook321
 before_install:
   - chmod +x mvnw
