--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ deploy:
     branch: main
   provider: heroku
   api-key:
-    secure: $HEROKU_API_KEY
+    $HEROKU_API_KEY
   app: addressbook321
 before_install:
   - chmod +x mvnw
